# nucleobench

./: .codecov.yml  .dockerignore  .gitignore  Dockerfile  README.md  README1.md  docker_entrypoint.py  docker_entrypoint_multi.py  docker_entrypoint_test.py  environment.yml  environment_runtime.yml  install.sh  mambafzhcaogafd7  pyproject.full.toml  pyproject.optimizers.toml  pyproject.toml  release_pypi_package.sh
.github/workflows/: agent-review.yml  borzoi-integration-tests-in-micromamba.yml  docker-integration-tests-in-docker-github.yml  docker-integration-tests-in-docker-hub.yml  docker-integration-tests-in-micromamba.yml  enformer-integration-tests-in-micromamba.yml  integration-tests-in-docker-github.yml  integration-tests-in-docker-hub.yml  integration-tests-in-docker.yml  integration-tests-in-micromamba.yml  lint.yml  optimus5p-integration-tests-in-micromamba.yml  pip-install-test.yml  python-tests-in-docker.yml  python-tests-in-mamba-env.yml  rinalmo-mrl-integration-tests-in-micromamba.yml  saluki-integration-tests-in-micromamba.yml  typecheck.yml  unit-tests-in-docker-github.yml  unit-tests-in-docker-hub.yml  unit-tests-in-docker.yml  unit-tests-in-micromamba.yml
integration_tests/: borzoi_integration_test.py  docker_entrypoint_test.py  enformer_integration_test.py  optimus5p_integration_test.py  rinalmo_mrl_integration_test.py  saluki_integration_test.py
integration_tests/data_loaders/: __init__.py  base.py  human7600_mrl_preds.py  mrl_by_bucket.py  muscle_gene_expression_by_bucket.py  ribosomal_loading_mttrans_repo.py  utr_5prime_rinalmo_repo.py
nucleobench/colab/: custom_task.ipynb
nucleobench/common/: argparse_lib.py  argparse_lib_test.py  attribution_lib_torch.py  attribution_lib_torch_test.py  constants.py  gcp_utils.py  gcp_utils_test.py  memory_utils.py  priority_queue.py  priority_queue_test.py  sequence_diversity_utils.py  sequence_diversity_utils_test.py  string_utils.py  string_utils_test.py  testing_utils.py  testing_utils_test.py  ttlcounterset.py  ttlcounterset_test.py
nucleobench/models/: __init__.py
nucleobench/optimizations/: __init__.py  model_class.py  optimization_class.py  typing.py  utils.py  utils_test.py
pypi/: pyproject.full.toml  pyproject.optimizers.toml  release_pypi_package.sh
recipes/: adabeam_atac.sh  adabeam_max.sh  adabeam_mecom.sh  adalead_atac.sh  adalead_gata2.sh  adalead_malinois.sh  evo_tism_loconly_max.sh  evo_tism_max.sh
recipes/colab/: custom_task.ipynb  pypi_substring_counting.ipynb
recipes/docker/: adabeam_atac.sh  docker_integration_tests.sh  docker_utils.sh
recipes/python/: adabeam_atac.sh  adabeam_gata2.sh  adabeam_max.sh  adabeam_mecom.sh  adabeam_substringcount.py  adalead_atac.sh  adalead_gata2.sh  adalead_malinois.sh  evo_tism_loconly_max.sh  evo_tism_max.sh  fastseqprop_gata2.sh  gflownet_gata2.sh
runners/: environment.yml
runners/gcp/: config.py  job_launcher.py  job_template.py
runners/google_batch/: config.py  job_launcher.py  job_template.py
(+91 files in other folders)
