[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleobench"
version = "2.0.8"
description = "Nucleobench optimizers and tasks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Move37 Labs", email = "joel.shor@move37labs.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.1",
    "lightning",
    "pytorch-lightning>=2.0,<3.0",
    "gReLU==1.1.0",
    "bpnet-lite==0.8.1",
    "numpy>=2.0.0",
    "scipy",
    "pandas",
    "h5py",
    "pyarrow",
    "fastparquet",
    "google-cloud-storage",
    "gcsfs",
    "pyBigWig==0.3.25",
    "xxhash",
    "ml-collections",
    "tqdm",
    "einops",
    "gradabeam",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-repeat",
    "pytest-cov",
    "coverage",
    "pyclean",
]

[project.urls]
"Homepage" = "https://github.com/move37-labs/nucleobench"
"Bug Tracker" = "https://github.com/move37-labs/nucleobench/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nucleobench", "nucleobench.*"]
exclude = [
    "nucleobench.models.rna.rinalmo_mrl.rinalmo",
    "nucleobench.models.rna.rinalmo_mrl.rinalmo.*",
    "nucleobench.models.malinois.model",
    "nucleobench.models.malinois.model.*",
    "tests",
    "tests.*",
]

[tool.setuptools.exclude-package-data]
"nucleobench.common" = [
    "all_enformer_proposals_cache.*",
    "gcs_proposals_enformer.*",
]
"*" = [
    "*.pt",
    "*.pth",
    "*.h5",
    "*.hdf5",
    "*.parquet",
    "*.safetensors",
    "*.bin",
    "*.pkl",
]

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["nucleobench"]
python_files = "*_test.py"
markers = [
    "optimus5p: Optimus 5-Prime integration tests",
    "saluki: Saluki integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "*.ipynb",
    "nucleobench/models/rna/rinalmo_mrl/rinalmo",
    "nucleobench/models/malinois/model",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nucleobench"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "nucleobench.models.rna.rinalmo_mrl.rinalmo.*",
    "nucleobench.models.malinois.model.*",
]
ignore_errors = true
